--- a/index.html
+++ b/index.html
@@ -25,11 +25,24 @@ Group of Architects
       <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
       <button class="btn-primary">Explore More</button>
             </div>
-      <img src="images/banner.png" alt="">
+      <img class="banner-image" src="images/banner.png" alt="">
       </div>
     </header>
     <main>
+     <section class="Teams display-flex">
+      <div class="team-img-container">
+          <img src="images/team1.png" alt="two architects discussing about design">
+          <img src="images/team2.png" alt="">
+          <img src="images/team3.png" alt="">
+          <img src="images/team4.png" alt="">
+      </div>
+        <div class="our-features">
+            <h3 class="feuture-title"><span id="quick-list">Quick list</span> <span>of Our</span> <span>Features</span></h3>
+            <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <button class="btn-primary">Explore More</button>
+        </div>
 
+     </section>
     </main>
     <footer>
 
